# CloudMonitor

./: .coverage  .gitignore  cloudmonitor.spec  main.py  pyproject.toml
core/: cache_mgr.py  config_mgr.py  event_bus.py  models.py  plugin_mgr.py  security.py  thread_utils.py
plugins/: __init__.py  interface.py
plugins/aws/: __init__.py  cost.py  ec2.py
plugins/azure/: __init__.py  cost.py  vm.py
plugins/digitalocean/: __init__.py  cost.py
plugins/gcp/: __init__.py  cost.py
plugins/gemini/: __init__.py  quota.py
plugins/zhipu/: __init__.py  balance.py
tests/: conftest.py  test_config_mgr.py  test_plugin_mgr.py  test_security.py
tests/plugins/: test_aws.py  test_azure.py  test_digitalocean.py  test_gcp.py  test_gemini.py  test_zhipu.py
ui/: dashboard.py  settings.py
ui/components/: card.py  dialog.py  nav.py
